--- a/public/css/components/magical-door.css
+++ b/public/css/components/magical-door.css
@@ -1,4 +1,4 @@
-/* Update public/css/components/magical-door.css */
+/*  public/css/components/magical-door.css */
 .door-container {
     position: relative;
     width: 100%;
