--- a/public/css/components/digital-book.css
+++ b/public/css/components/digital-book.css
@@ -69,6 +69,7 @@
     border: 1px solid rgba(138, 43, 226, 0.5);
     display: flex;
     flex-direction: column;
+    text-align: justify;
 }
 
 .book-left-page {
