--- a/public/css/components/audio-player.css
+++ b/public/css/components/audio-player.css
@@ -16,7 +16,7 @@
 }
 
 .chapter-audio-player.minimized {
-    transform: translateY(calc(100% - 30px));
+    transform: translateY(calc(100% - 40px));
 }
 
 .audio-player-header {
@@ -236,6 +236,7 @@
 
     .chapter-audio-player {
         padding: 8px 15px;
+        width: 90%;
     }
 
     .chapter-audio-player.minimized {
