--- a/public/css/components/digital-book.css
+++ b/public/css/components/digital-book.css
@@ -40,8 +40,8 @@
 
 .book-open {
     position: relative;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     display: flex;
     perspective: 1500px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
@@ -190,11 +190,11 @@
 }
 
 .prev-page {
-    left: 10px;
+    left: 10%;
 }
 
 .next-page {
-    right: 10px;
+    right: 10%;
 }
 
 /* Page turning animation */
