--- a/public/css/components/spells.css
+++ b/public/css/components/spells.css
@@ -161,7 +161,7 @@
 
 .spell-actions {
     display: flex;
-    gap: 10px;
+    gap: 0.5rem;
     width: 100%;
     margin-top: 10px;
     position: absolute;
