--- a/public/css/components/footer.css
+++ b/public/css/components/footer.css
@@ -50,9 +50,15 @@
     .mystical-footer {
         flex-direction: column;
         gap: 10px;
+        position: relative !important;
     }
     
     .footer-copyright, .social-icons-container {
         margin: 0;
+    }
+    
+    .social-icon {
+        width: 100%;
+        height: 100%;
     }
 }
