--- a/public/css/admin/admin.css
+++ b/public/css/admin/admin.css
@@ -178,6 +178,9 @@ body {
 }
 
 /* Form Elements */
+.admin-form {
+    margin-top: 20px;
+}
 .admin-form label {
     color: rgba(255, 255, 255, 0.8);
     font-weight: 500;
@@ -214,11 +217,19 @@ body {
     border-color: #9400d3;
 }
 
+#price {
+    width: 30%;
+}
+#currency {
+    width: 20%;
+}
+
 /* Tables */
 .admin-table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 30px;
+    margin-top: 1rem;
 }
 
 .admin-table th {
@@ -248,6 +259,42 @@ body {
 .admin-table .actions-cell {
     display: flex;
     gap: 5px;
+}
+
+.badge {
+    color: #fff;               /* White text */
+    padding: 0.35em 0.65em;
+    font-size: 0.8rem;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.375rem;   /* Rounded edges */
+    display: inline-block;
+}
+.bg-success {
+    background-color: #198754; /* Green background */
+}
+.bg-danger {
+    background-color: #dc3545; /* Red background */
+}
+.bg-warning {
+    background-color: #ffbf00; /* Yellow background */
+}
+.bg-info {
+    background-color: #17a2b8; /* Blue background */
+}
+.bg-light {
+    background-color: #f8f9fa; /* Light background */
+}
+.bg-dark {
+    background-color: #343a40; /* Dark background */
+}
+.bg-primary {
+    background-color: #007bff; /* Blue background */
+}
+.bg-secondary {
+    background-color: #6c757d; /* Grey background */
 }
 
 /* Alerts */
